--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,221 @@
 
+body{
+    background-color: whitesmoke;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+/* desktop view*/
+  @media(min-width: 962px){
+    *{
+        margin: auto;
+    }  
+
+  #menu{
+      width: fit-content;
+      margin: auto;
+      margin-top: 5%;
+      font-size: 2em;
+  }
+  #container{
+      display: flex;
+      flex-direction: row;
+  }
+
+  .bs-3{
+      box-sizing: border-box;
+      border: 2px solid black;
+      display: flex;
+      flex-direction: column;
+      background-color: gray;
+      width: 75%;
+      height: 25;
+      margin-top: 2%;
+      margin-left: 1%;
+      margin-right: 1%;
+      padding-left: 2%;
+      padding-bottom: 3%;
+      align-content: flex-start;
+      font-size: 1.2em;
+  }
+
+  .head{
+      position: relative;
+      top: 0%;
+      right: 0%;
+      box-sizing: border-box;
+      border-left: 2px solid black;
+      border-bottom: 2px solid black;
+      width: 40%;
+      margin-right: 0%;
+      margin-bottom: 3%;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      font-weight: bold ;
+      font-size: 1em;
+  }
+
+  #m1{
+      background-color: tomato ;
+      padding-left: 10%;
+  }
+
+  #m2{
+    background-color: darkred ;
+    color: white;
+    padding-left: 13%;
+}
+
+#m3{
+    background-color: rgb(248, 248, 134);
+    padding-left: 15%;
+}  
+
+
+} /* desktop view done */
+
+
+/* mobile view */
+
+@media (max-width: 767px){
+
+    *{
+        margin: auto;
+    }
+
+  #menu{
+      width: fit-content;
+      margin: auto;
+      font-size: 1.5em;
+  }
+  #container{
+      display: flex;
+      flex-direction: column;
+  }
+
+  .bs-3{
+      box-sizing: border-box;
+      border: 2px solid black;
+      display: flex;
+      flex-direction: column;
+      background-color: gray;
+      width: 90%;
+      margin-top: 2%;
+      padding-left: 2px;
+      padding: 0 0 2% 2%;
+
+  }
+
+  .head{
+      position: relative;
+      top: 0%;
+      right: 0%;
+      box-sizing: border-box;
+      border-left: 2px solid black;
+      border-bottom: 2px solid black;
+      width: 30%;
+      margin-right: 0%;
+      margin-bottom: 1%;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      font-size: 1em;
+      font-weight: bold ;
+  }
+
+  #m1{
+      background-color: tomato ;
+      padding-left: 8%;
+  }
+
+  #m2{
+    background-color: darkred ;
+    color: white;
+    padding-left: 9%;
+}
+
+#m3{
+    background-color: rgb(248, 248, 134);
+    padding-left: 10%;
+}  
+  
+
+} /* mobile display done */
+
+/* tablet view */
+
+@media (min-width: 768px) and (max-width :961px) {
+
+    *{
+        margin: auto;
+    }
+
+  #menu{
+      width: fit-content;
+      margin: auto;
+      font-size: 1.5em;
+  }
+
+
+  #o1, #o2{
+      box-sizing: border-box;
+      border: 2px solid black;
+      float: left;
+      background-color: gray;
+      width: 45%;
+      margin-top: 2%;
+      margin-left: 4%;
+      padding-left: 2px;
+
+  }
+
+  #o3{
+     box-sizing: border-box;
+     border: 2px solid black;
+     float: left;
+     background-color: gray;
+     width: 94%;
+     margin-top: 2%;
+     margin-left: 4%;
+     padding-left: 2px;
+  }
+
+  .head{
+      position: relative;
+      top: 0%;
+      right: 0%;
+      box-sizing: border-box;
+      border-left: 2px solid black;
+      border-bottom: 2px solid black;
+      margin-right: 0%;
+      padding-left: 1%;
+      font-size: 1.2em;
+      font-weight: bold ;
+  }
+
+  #m1{
+      background-color: tomato ;
+      width: 40%;
+      padding-left: 12%;
+      padding-top: 1%;
+      padding-bottom: 1%;
+  }
+
+  #m2{
+      background-color: darkred ;
+      color: white;
+      width: 40%;
+      padding-left: 15%;
+      padding-top: 1%;
+      padding-bottom: 1%;
+}
+
+#m3{
+      background-color: rgb(248, 248, 134);
+      width: 19%;
+      padding-left: 6%;
+      padding-top: 0.5%;
+      padding-bottom: 0.5%;
+}
+  
+
+} /* tablet display done */
+   
+  
