--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body{
       width: fit-content;
       margin: auto;
       margin-top: 5%;
+      margin-bottom: 5%;
       font-size: 2em;
   }
   #container{
@@ -85,6 +86,7 @@ body{
       width: fit-content;
       margin: auto;
       font-size: 1.5em;
+      margin-bottom: 5%;
   }
   #container{
       display: flex;
@@ -151,6 +153,7 @@ body{
       width: fit-content;
       margin: auto;
       font-size: 1.5em;
+      margin-bottom: 5%;
   }
 
 
